# shbr-fall2022

./: README.md
scooters/: main.py  pyproject.toml
scooters/app/: context.py  dto.py  models.py  routes.py  storage.py
scooters/app/api/v1/: get_scooters.py  send_command.py
scooters/app/utils/: geocode.py  scooters.py  secrets.py  telematics.py
scooters/scripts/: database_fill.sql  database_schema.sql  database_start.sh
